ajustes gerais
