# internal/user/http/requests/recover_user_password.go
@@ -5,7 +5,7 @@ import user_services "github.com/gabrielmrtt/taski/internal/user/services"
 type RecoverUserPasswordRequest struct {
 	Token                string `json:"token"`
 	Password             string `json:"password"`
-	PasswordConfirmation string `json:"password_confirmation"`
+	PasswordConfirmation string `json:"passwordConfirmation"`
 }
 
 func (r *RecoverUserPasswordRequest) ToInput() user_services.RecoverUserPasswordInput {
