# internal/user/http/requests/register_user.go
@@ -6,7 +6,7 @@ type RegisterUserRequest struct {
 	Name        string  `json:"name"`
 	Email       string  `json:"email"`
 	Password    string  `json:"password"`
-	PhoneNumber *string `json:"phone_number"`
+	PhoneNumber *string `json:"phoneNumber"`
 }
 
 func (r *RegisterUserRequest) ToInput() user_services.RegisterUserInput {
